# viewertech_leave_manager

./: license.txt  package.json  pyproject.toml
viewertech_leave_manager/: README.md  hooks.py  leave_manager.py  modules.txt  setup.py
viewertech_leave_manager/config/: desktop.py
viewertech_leave_manager/doctype/leave_manager_settings/: leave_manager_settings.py
viewertech_leave_manager/public/: build.json
viewertech_leave_manager/public/css/: leave_dashboard.css
viewertech_leave_manager/public/js/: leave_dashboard.js
viewertech_leave_manager/viewertech_leave_manager/: modules.txt
viewertech_leave_manager/viewertech_leave_manager/viewertech_leave_manager/: api.py  permissions.py
viewertech_leave_manager/viewertech_leave_manager/viewertech_leave_manager/doctype/leave_manager_settings/: leave_manager_settings.json
viewertech_leave_manager/viewertech_leave_manager/www/leave_dashboard/: index.html  leave_dashboard.py
